--- a/css/styles.css
+++ b/css/styles.css
@@ -41,10 +41,12 @@ button:hover {
     flex-direction: column;
     max-width: 175px;
     margin: 15px 7px 0 7px;
+    height: 218px;
 }
 
 .tile img{
     border-radius: 5px 5px 5px 5px;
+    height: 218px;
 }
 .name {
     position: absolute;
