sort function created and linked to sort button, added more info to each tile

--- a/css/styles.css
+++ b/css/styles.css
@@ -41,7 +41,7 @@ button:hover {
     flex-direction: column;
     max-width: 175px;
     margin: 15px 7px 0 7px;
-    height: 218px;
+    height: 245px;
 }
 
 .tile img{
@@ -56,8 +56,8 @@ button:hover {
     background-color: rgb(35, 54, 141);
     border-radius: 0 0 5px 5px;
     text-align: center;
-    height: 1.6rem;
+    height: 40px;
     padding-top: 0px;
-    font-size: 1.1rem;
-    line-height: 1.6rem;
+    font-size: .9rem;
+    line-height: 1.35;
 }
