--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,58 @@
-body {
-    position: relative;
-    font-family: montserrat;
-    padding: 0px 45px;
+html {
+    padding: 0;
+    margin: 0;
 }
 
+body {
+
+    font-family: montserrat;
+    margin: 0;
+    padding: 0;
+}
+
+.background{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 38vh;
+    object-fit: cover;
+    filter: blur(1.4px) brightness(70%);
+    
+}
 header {
+    position: relative;
+    height: 37vh;
+    color: white;
+    top: 50%;
+}
+
+h1 {
+    position: absolute;
     text-align: center;
-    font-size: 2.3rem;
-    line-height: 100%;
+    width: 100%;
+    top: 7%;
+    font-size: 4.2rem;
+}
+
+p{
+    position: absolute;
+    font-style: italic;
+    font-size: 1.2rem;
+    text-align: center;
+    width: 100%;
+    top: 44%;
+}
+
+.buttons {
+    position: absolute;
+    display: flex; 
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100vw;
+    justify-content: center;
+    top: 63%;
+    height: 100px;
 }
 
 button {
@@ -16,11 +61,12 @@ button {
     border-radius: 5px;
     height: 44px;
     font-family: montserrat;
-    padding: 20px;
+    padding: 17px;
     line-height: 0px;
     font-size: .9rem;
     color: white;
-    margin-bottom: 20px;
+    margin: 0 5px 8px 5px;
+    flex-basis: 18%;
 }
 
 button:hover {
@@ -33,6 +79,8 @@ button:hover {
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
+    background-color: white;
+    position: absolute;
 }
 
 .tile {
@@ -42,18 +90,23 @@ button:hover {
     max-width: 175px;
     margin: 15px 7px 0 7px;
     height: 245px;
+    background-color: #0259fe;
+    border-radius: 5px 5px 5px 5px;
+    height: 215px;
 }
 
 .tile img{
     border-radius: 5px 5px 5px 5px;
-    height: 218px;
+    height: 95%;
+    width: 95%;
+    margin: auto;
 }
 .name {
     position: absolute;
     bottom: 0;
     width: 100%;
     color: white;
-    background-color: rgb(35, 54, 141);
+    background-color: #0259fe;
     border-radius: 0 0 5px 5px;
     text-align: center;
     height: 40px;
